--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 					attractive places
 				</h2>
 
-				<div class="discover__container container swiper-container">
+				<div class="discover__container container swiper">
 					<div class="swiper-wrapper">
 						<!-----------------| DISCOVER - 1 |----------------->
 						<div class="discover__card swiper-slide">
